[gd_scene load_steps=5 format=2]

[ext_resource path="res://gui/deck_builder/DeckRoll.gd" type="Script" id=1]
[ext_resource path="res://gui/view/CardViewItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/foreground_stylebox.tres" type="StyleBox" id=3]
[ext_resource path="res://thridparty/big_font.tres" type="DynamicFont" id=4]

[node name="DeckRoll" type="WindowDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -544.0
margin_bottom = -255.0
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 460.0
margin_bottom = 325.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 460.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
text = "SECURITY"
align = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 460.0
margin_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 460.0
margin_bottom = 141.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 112.0
margin_top = 28.0
margin_right = 348.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CardViewItem" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_right = 44.0

[node name="CardViewItem2" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 48.0
margin_right = 92.0

[node name="CardViewItem3" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 96.0
margin_right = 140.0

[node name="CardViewItem4" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 144.0
margin_right = 188.0

[node name="CardViewItem5" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 192.0
margin_right = 236.0

[node name="HandLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 145.0
margin_right = 460.0
margin_bottom = 177.0
custom_fonts/font = ExtResource( 4 )
text = "HAND"
align = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 181.0
margin_right = 460.0
margin_bottom = 185.0

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 189.0
margin_right = 460.0
margin_bottom = 286.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer2"]
margin_left = 88.0
margin_top = 28.0
margin_right = 372.0
margin_bottom = 68.0
size_flags_vertical = 3

[node name="CardViewItem" parent="MarginContainer/VBoxContainer/CenterContainer2/HBoxContainer" instance=ExtResource( 2 )]
margin_right = 44.0

[node name="CardViewItem2" parent="MarginContainer/VBoxContainer/CenterContainer2/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 48.0
margin_right = 92.0

[node name="CardViewItem3" parent="MarginContainer/VBoxContainer/CenterContainer2/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 96.0
margin_right = 140.0

[node name="CardViewItem4" parent="MarginContainer/VBoxContainer/CenterContainer2/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 144.0
margin_right = 188.0

[node name="CardViewItem5" parent="MarginContainer/VBoxContainer/CenterContainer2/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 192.0
margin_right = 236.0

[node name="CardViewItem6" parent="MarginContainer/VBoxContainer/CenterContainer2/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 240.0
margin_right = 284.0

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 168.0
margin_top = 290.0
margin_right = 292.0
margin_bottom = 325.0
rect_min_size = Vector2( 120, 35 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 4 )
text = "ROLL AGAIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 279.0
margin_right = 460.0
margin_bottom = 325.0
rect_min_size = Vector2( 0, 46 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 3 )
